# OpenniSampleTaker

./: CMakeLists.txt  README.md  main.cpp  sampleTaker.cpp  sampleTaker.h
